Try and ensure theme CSS doesn't bleed into the map.

--- a/includes/wp-mapstraction/css/wp-mapstraction.css
+++ b/includes/wp-mapstraction/css/wp-mapstraction.css
@@ -3,6 +3,12 @@
 	box-shadow: none !important;
 }
 
+
+.wp-quadratum-shortcode-map img {
+	max-width: none !important;
+	box-shadow: none !important;
+}
+
 .olControlAttribution {
 	bottom: 1% !important;
 }
